--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -17,44 +17,44 @@
    <widget class="QPushButton" name="pushButton">
     <property name="geometry">
      <rect>
-      <x>340</x>
-      <y>200</y>
-      <width>80</width>
+      <x>250</x>
+      <y>290</y>
+      <width>101</width>
       <height>21</height>
      </rect>
     </property>
     <property name="text">
-     <string>Send Test</string>
+     <string>Send Test Chars</string>
     </property>
    </widget>
    <widget class="QPushButton" name="pushButton_2">
     <property name="geometry">
      <rect>
-      <x>350</x>
-      <y>120</y>
+      <x>250</x>
+      <y>110</y>
       <width>101</width>
-      <height>20</height>
+      <height>21</height>
      </rect>
     </property>
     <property name="text">
-     <string>Connect to COM5</string>
+     <string>Connect</string>
     </property>
    </widget>
    <widget class="QPlainTextEdit" name="plainTextEdit">
     <property name="geometry">
      <rect>
-      <x>180</x>
-      <y>260</y>
-      <width>104</width>
-      <height>70</height>
+      <x>23</x>
+      <y>250</y>
+      <width>221</width>
+      <height>91</height>
      </rect>
     </property>
    </widget>
    <widget class="QPushButton" name="pushButton_3">
     <property name="geometry">
      <rect>
-      <x>420</x>
-      <y>200</y>
+      <x>250</x>
+      <y>400</y>
       <width>80</width>
       <height>21</height>
      </rect>
@@ -66,7 +66,7 @@
    <widget class="QPushButton" name="pushButton_4">
     <property name="geometry">
      <rect>
-      <x>290</x>
+      <x>250</x>
       <y>260</y>
       <width>80</width>
       <height>21</height>
@@ -79,14 +79,34 @@
    <widget class="QPushButton" name="pushButton_5">
     <property name="geometry">
      <rect>
-      <x>450</x>
-      <y>120</y>
+      <x>350</x>
+      <y>110</y>
       <width>80</width>
       <height>21</height>
      </rect>
     </property>
     <property name="text">
      <string>Disconnect</string>
+    </property>
+   </widget>
+   <widget class="QPlainTextEdit" name="plainTextEdit_2">
+    <property name="geometry">
+     <rect>
+      <x>140</x>
+      <y>110</y>
+      <width>104</width>
+      <height>21</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QPlainTextEdit" name="plainTextEdit_3">
+    <property name="geometry">
+     <rect>
+      <x>23</x>
+      <y>379</y>
+      <width>221</width>
+      <height>91</height>
+     </rect>
     </property>
    </widget>
   </widget>
